# patina

./: Cargo.toml  Makefile.toml  README.md  cspell.yml
.github/workflows/: calculate-unsafe-code.yml  ci-workflow.yml  crate-version-update.yml  patina-qemu-pr-validation.yml  publish-release.yml  rust-version-check.yml
components/patina_acpi/: Cargo.toml  README.md
components/patina_acpi/src/: acpi.rs  acpi_protocol.rs  acpi_table.rs  component.rs  error.rs  hob.rs  integration_test.rs  lib.rs  service.rs  signature.rs
components/patina_adv_logger/: Cargo.toml  README.md
components/patina_adv_logger/src/: component.rs  integration_test.rs  lib.rs  logger.rs  memory_log.rs  parser.rs  reader.rs  writer.rs
components/patina_mm/src/component/: communicator.rs
components/patina_mm/src/component/communicator/: comm_buffer_update.rs
components/patina_mm/tests/patina_mm_integration/common/: real_component_framework.rs
components/patina_mm/tests/patina_mm_integration/framework/: core_functionality_tests.rs
components/patina_mm/tests/patina_mm_integration/mm_communicator/: stress_tests.rs
components/patina_smbios/: Cargo.toml
components/patina_test/: Cargo.toml  README.md
components/patina_test/src/: __private_api.rs  component.rs  lib.rs  service.rs
core/patina_debugger/: Cargo.toml  README.md
core/patina_debugger/src/: dbg_target.rs  debugger.rs  lib.rs  system.rs
core/patina_internal_collections/src/: node.rs
core/patina_internal_cpu/: README.md
core/patina_internal_cpu/src/: interrupts.rs  lib.rs
core/patina_internal_cpu/src/cpu/: stub.rs
core/patina_internal_cpu/src/cpu/aarch64/: cpu.rs
core/patina_internal_cpu/src/cpu/x64/: cpu.rs
core/patina_internal_cpu/src/interrupts/: stub.rs
core/patina_internal_cpu/src/interrupts/aarch64/: interrupt_manager.rs
core/patina_internal_cpu/src/interrupts/x64/: interrupt_manager.rs
core/patina_internal_cpu/src/paging/: aarch64.rs  null.rs  x64.rs
docs/: book.toml  cdn-assets.js
docs/src/: patina.md
docs/src/component/: requirements.md
docs/src/dev/debugging/: windbg_debugging.md
docs/src/dev/principles/: error-handling.md
docs/src/dev/testing/: platform.md
docs/src/rfc/text/: 0015-patina-release-process.md  0024-device-path.md  0025-downstream-build-options.md
patina_dxe_core/: Cargo.toml
patina_dxe_core/src/: allocator.rs  component_dispatcher.rs  config_tables.rs  core_patina_tests.rs  cpu.rs  driver_services.rs  dxe_dispatch_service.rs  dxe_services.rs  event_db.rs  events.rs  filesystems.rs  gcd.rs  image.rs  lib.rs  memory_attributes_protocol.rs  memory_manager.rs  misc_boot_services.rs  pecoff.rs  pi_dispatcher.rs  protocol_db.rs  protocols.rs  runtime.rs  systemtables.rs  test_support.rs  tpl_mutex.rs
patina_dxe_core/src/allocator/: fixed_size_block_allocator.rs  uefi_allocator.rs
patina_dxe_core/src/allocator/usage_tests/: uefi_memory_map.rs
patina_dxe_core/src/config_tables/: debug_image_info_table.rs  memory_attributes_table.rs
patina_dxe_core/src/core_patina_tests/: audit_tests.rs  stability_tests.rs
patina_dxe_core/src/cpu/: cpu_arch_protocol.rs  perf_timer.rs
patina_dxe_core/src/gcd/: spin_locked_gcd.rs
patina_dxe_core/src/pi_dispatcher/: debug_image_info_table.rs  fv.rs  image.rs
sdk/patina/: Cargo.toml  README.md
sdk/patina/benches/: bench_component.rs
sdk/patina/src/: base.rs  boot_services.rs  component.rs  device_path.rs  driver_binding.rs  lib.rs  pi.rs  runtime_services.rs  test.rs  tpl_mutex.rs  uefi_protocol.rs
sdk/patina/src/base/: guid.rs
sdk/patina/src/component/: hob.rs  params.rs  service.rs  storage.rs  struct_component.rs
sdk/patina/src/component/service/: dxe_dispatch.rs  memory.rs
sdk/patina/src/device_path/: helpers.rs  paths.rs  walker.rs
sdk/patina/src/performance/: measurement.rs
sdk/patina/src/pi/: fw_fs.rs  hob.rs  protocols.rs
sdk/patina/src/pi/hob/: hob_list.rs
sdk/patina/src/serial/: uart.rs
sdk/patina/src/test/: __private_api.rs
sdk/patina/src/uefi_protocol/: status_code.rs
sdk/patina/src/uefi_protocol/device_path/: nodes.rs
sdk/patina_macro/: README.md
sdk/patina_macro/src/: lib.rs  test_macro.rs
supply-chain/: config.toml
