[package]
name = "patina_acpi"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "UEFI ACPI services that provide common types and functionality used in ACPI development."

[lints]
workspace = true

[dependencies]
log = { workspace = true }
memoffset = { workspace = true }
mockall = { workspace = true, optional = true }
r-efi = { workspace = true }
scroll = { workspace = true }
spin = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

patina = { workspace = true, features = ["alloc"] }
patina_test = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
patina = { workspace = true, features = ["mockall"] }

[features]
mockall = ["dep:mockall", "std"]
std = []
