[package]
name = "patina_adv_logger"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
description = "Advanced logger component."

[lints]
workspace = true

[[bin]]
name = "advlog_parser"
path = "bin/bin.rs"
required-features = ['std']

[dependencies]
log = { workspace = true }
patina = { workspace = true}
r-efi = { workspace = true }
spin = { workspace = true }
mu_rust_helpers = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

# Only used for CLI
clap = { workspace = true, features = ['derive'], optional = true }

[dev-dependencies]
patina_dxe_core = { path = "../../patina_dxe_core" }

[features]
alloc = []
reader = []
component = ['alloc', 'reader']
std = ['clap', 'alloc', 'reader']
default = ['component']
