[package]
name = "patina_debugger"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
description = "Debugger implementation for a Patina Core."

[lints]
workspace = true

[dependencies]
cfg-if = { workspace = true }
gdbstub = { workspace = true }
patina = { workspace = true }
patina_internal_cpu = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
patina_paging = { workspace = true  }
bitfield-struct = { workspace = true  }

[dev-dependencies]
mockall = { workspace = true }
serial_test = { workspace = true }

[target.'cfg(all(target_arch="x86_64"))'.dependencies]
patina_mtrr = { workspace = true }

[features]
default = []
alloc = []
